--- a/swf/sdk/locale/en_US/helper.properties
+++ b/swf/sdk/locale/en_US/helper.properties
@@ -4,8 +4,8 @@ install_device=Download and start up the Brass Monkey application now. Make sure
 
 see_device=Do you see you device listed in box below?\nIf so, go to your device and select the option in the list.
 
-try_device=Okay, Lets see if we can connect your device over your local lan.
+try_device=Okay, Lets see if we can connect to your device on your WiFi network.
 
-failed=No! Unfortunalty, your LAN configuration is preventing the connection. Reconfigure your LAN and please try again.
+failed=Oops! Unfortunately, something about your network is preventing the connection. Check out our support page or contact us at <a href="mailto:support@playbrassmonkey.com">support@playbrassmonkey.com</a> for additional help.
 
 success=Success! You are now ready to play games!
