--- a/swf/connectionhelper/locale/en_US/connecter.properties
+++ b/swf/connectionhelper/locale/en_US/connecter.properties
@@ -2,7 +2,7 @@
 
 install_device=Download and start up the Brass Monkey application now. Make sure you device is on the same WiFi connection as your computer or smart tv.
 
-see_device=Do you see your device listed in the box to the left? If so go to your device and select the option shown in the box.
+see_device=Do you see your device listed in the box below? If so go to your device and select the option shown in the box.
 
 try_device=Okay, Lets see if we can connect to your device on your WiFi network.
 
