Aligning channel color arrow and updating fail text

--- a/swf/sdk/locale/en_US/helper.properties
+++ b/swf/sdk/locale/en_US/helper.properties
@@ -6,7 +6,7 @@ see_device=Do you see your device listed in the box to the left? If so go to you
 
 try_device=Okay, Lets see if we can connect to your device on your WiFi network.
 
-failed=Oops! Unfortunately, something about your network is preventing the connection. Check out our support page or contact us at <font color="#DA6323"><a href="mailto:support@playbrassmonkey.com">support@playbrassmonkey.com</a></font> for additional help.
+failed=Oops! Unfortunately, something about your network is preventing the connection. Check out our <font color="#DA6323"><a href="http://playbrassmonkey.com/support" target="_blank">support page</a></font> or contact us at <font color="#DA6323"><a href="mailto:support@playbrassmonkey.com">support@playbrassmonkey.com</a></font> for additional help.
 
 success=Success! You are now ready to play games!
 
