Updated build w/ new text

--- a/swf/sdk/locale/en_US/helper.properties
+++ b/swf/sdk/locale/en_US/helper.properties
@@ -2,7 +2,7 @@
 
 install_device=Download and start up the Brass Monkey application now. Make sure you device is on the same WiFi connection as your computer or smart tv.
 
-see_device=Do you see your device listed in the box to the left? If so go to your device and select the option shown in the box.
+see_device=Do you see your device listed in the box below? If so go to your device and select the option shown in the box.
 
 try_device=Okay, Lets see if we can connect to your device on your WiFi network.
 
@@ -10,7 +10,7 @@ failed=Oops! Unfortunately, something about your network is preventing the conne
 
 success=Success! You are now ready to play games!
 
-device_detected=Do you see your device listed in the box to the left? If so go to your device and select the option shown in the box.
+device_detected=Do you see your device listed in the box below? If so go to your device and select the option shown in the box.
 
 no_device_detected=Make sure your mobile device is on the same WiFi network as your computer and that you have the Brass Monkey app opened.
 
